recursion.cons.lessons.recursion.cons.Concat.scala.error
concat:1: error: type mismatch;
 found   : List[Int]
 required: Int
def concat(l1:List[Int],  l2:List[Int]): List[Int] = l1::l2
                                                       ^