recursion.cons.lessons.recursion.cons.Concat.scala.code
def concat(l1:List[Int],  l2:List[Int]): List[Int] = l1::l2
